--- a/김정은/Week 3/hw1/app/src/main/res/layout/activity_main.xml
+++ b/김정은/Week 3/hw1/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,7 @@
     tools:context=".MainActivity">
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/activity_main_tvSignup"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="SIGN UP"
@@ -23,16 +23,16 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/activity_main_tvId"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
         android:text="ID"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+        app:layout_constraintTop_toBottomOf="@id/activity_main_tvSignup" />
 
     <EditText
-        android:id="@+id/editID"
+        android:id="@+id/activity_main_etId"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:minHeight="48dp"
@@ -40,19 +40,19 @@
         android:hint="아이디를 입력해주세요"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
+        app:layout_constraintTop_toBottomOf="@id/activity_main_tvId" />
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/activity_main_tvPwd"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:text="비밀번호"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editID" />
+        app:layout_constraintTop_toBottomOf="@id/activity_main_etId" />
 
     <EditText
-        android:id="@+id/editTextTextPassword"
+        android:id="@+id/activity_main_etPwd"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:minHeight="48dp"
@@ -61,19 +61,19 @@
         android:inputType="textPassword"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView3" />
+        app:layout_constraintTop_toBottomOf="@id/activity_main_tvPwd" />
 
     <TextView
-        android:id="@+id/textView4"
+        android:id="@+id/activity_main_tvNickname"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:text="닉네임"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />
+        app:layout_constraintTop_toBottomOf="@id/activity_main_etPwd" />
 
     <EditText
-        android:id="@+id/editTextTextPersonName"
+        android:id="@+id/activity_main_etNickname"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:minHeight="48dp"
@@ -82,19 +82,19 @@
         android:hint="닉네임을 입력해주세요"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView4" />
+        app:layout_constraintTop_toBottomOf="@id/activity_main_tvNickname" />
 
     <TextView
-        android:id="@+id/textView5"
+        android:id="@+id/activity_main_tvMbti"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:text="MBTI"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />
+        app:layout_constraintTop_toBottomOf="@id/activity_main_etNickname" />
 
     <EditText
-        android:id="@+id/editTextTextPersonName2"
+        android:id="@+id/activity_main_etMbti"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:minHeight="48dp"
@@ -103,19 +103,19 @@
         android:hint="MBTI를 입력해주세요"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView5" />
+        app:layout_constraintTop_toBottomOf="@id/activity_main_tvMbti" />
 
     <TextView
-        android:id="@+id/textView7"
+        android:id="@+id/activity_main_tvIntroduce"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:text="About me"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2" />
+        app:layout_constraintTop_toBottomOf="@id/activity_main_etMbti" />
 
     <EditText
-        android:id="@+id/editTextTextPersonName3"
+        android:id="@+id/activity_main_etIntroduce"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:minHeight="48dp"
@@ -124,10 +124,10 @@
         android:hint="한 줄 자기소개를 입력해주세요"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView7" />
+        app:layout_constraintTop_toBottomOf="@id/activity_main_tvIntroduce" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/activity_main_btnSignup"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
@@ -135,7 +135,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName3" />
+        app:layout_constraintTop_toBottomOf="@id/activity_main_etIntroduce" />
 
 
 
