--- a/전민주/Week 3/HW_1/app/src/main/res/layout/activity_main.xml
+++ b/전민주/Week 3/HW_1/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,7 @@
     tools:context=".MainActivity">
 
     <TextView
-        android:id="@+id/SIGNUPtext"
+        android:id="@+id/activity_main_tvSIGNUP"
         android:layout_width="160dp"
         android:layout_height="49dp"
         android:layout_marginTop="60dp"
@@ -17,32 +17,31 @@
         android:text="SIGN UP"
         android:textSize="40dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/IDtext"
+        android:id="@+id/activity_main_tvID"
         android:layout_width="20dp"
         android:layout_height="20dp"
         android:layout_marginStart="0dp"
         android:layout_marginTop="30dp"
         android:text="ID"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/SIGNUPtext" />
+        app:layout_constraintTop_toBottomOf="@id/activity_main_tvSIGNUP" />
 
     <TextView
-        android:id="@+id/passwordtext"
+        android:id="@+id/activity_main_tvPassword"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="0dp"
         android:layout_marginTop="16dp"
         android:text="비밀번호"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editIDText" />
+        app:layout_constraintTop_toBottomOf="@id/activity_main_etInputID" />
 
     <EditText
-        android:id="@+id/editIDText"
+        android:id="@+id/activity_main_etInputID"
         android:layout_width="0dp"
         android:layout_height="48dp"
         android:layout_marginTop="10dp"
@@ -50,12 +49,11 @@
         android:hint="아이디를 입력해주세요"
         android:inputType="text"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/IDtext" />
+        app:layout_constraintTop_toBottomOf="@id/activity_main_tvID" />
 
     <EditText
-        android:id="@+id/editpasword"
+        android:id="@+id/activity_main_etInputPassword"
         android:layout_width="0dp"
         android:layout_height="48dp"
         android:layout_marginTop="10dp"
@@ -63,22 +61,21 @@
         android:hint="비밀번호를 입력해주세요"
         android:inputType="text"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/passwordtext" />
+        app:layout_constraintTop_toBottomOf="@id/activity_main_tvPassword" />
 
     <TextView
-        android:id="@+id/nicknametext"
+        android:id="@+id/activity_main_tvNickName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="0dp"
         android:layout_marginTop="16dp"
         android:text="닉네임"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editpasword" />
+        app:layout_constraintTop_toBottomOf="@id/activity_main_etInputPassword" />
 
     <EditText
-        android:id="@+id/editnickname"
+        android:id="@+id/activity_main_etInputNickName"
         android:layout_width="0dp"
         android:layout_height="48dp"
         android:layout_marginTop="10dp"
@@ -86,22 +83,21 @@
         android:inputType="text"
         android:hint = "닉네임을 입력해주세요"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/nicknametext" />
+        app:layout_constraintTop_toBottomOf="@id/activity_main_tvNickName" />
 
     <TextView
-        android:id="@+id/MBTItext"
+        android:id="@+id/activity_main_tvMBTI"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="0dp"
         android:layout_marginTop="16dp"
         android:text="MBTI"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editnickname" />
+        app:layout_constraintTop_toBottomOf="@id/activity_main_etInputNickName" />
 
     <EditText
-        android:id="@+id/editMBTI"
+        android:id="@+id/activity_main_etInputMBTI"
         android:layout_width="0dp"
         android:layout_height="48dp"
         android:layout_marginTop="10dp"
@@ -111,20 +107,20 @@
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/MBTItext" />
+        app:layout_constraintTop_toBottomOf="@id/activity_main_tvMBTI" />
 
     <TextView
-        android:id="@+id/AboutMetext"
+        android:id="@+id/activity_main_tvAboutMe"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="0dp"
         android:layout_marginTop="16dp"
         android:text="About Me"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editMBTI" />
+        app:layout_constraintTop_toBottomOf="@id/activity_main_etInputMBTI" />
 
     <EditText
-        android:id="@+id/editAboutMe"
+        android:id="@+id/activity_main_etInputAboutMe"
         android:layout_width="0dp"
         android:layout_height="48dp"
         android:layout_marginTop="10dp"
@@ -132,19 +128,17 @@
         android:hint="한줄 자기소개를 입력해주세요"
         android:inputType="text"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/AboutMetext" />
+        app:layout_constraintTop_toBottomOf="@id/activity_main_tvAboutMe" />
 
     <Button
-        android:id="@+id/signupbutton"
+        android:id="@+id/activity_main_btnSIGNUP"
         android:layout_width="0dp"
         android:layout_height="48dp"
         android:layout_marginTop="60dp"
         android:text="회원가입 하기"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editAboutMe" />
+        app:layout_constraintTop_toBottomOf="@id/activity_main_etInputAboutMe" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
