Week 3: 권지윤 과제 수정 제출
Refactor: 코드 수정
-마진, 패딩 혼용
-필요없는 코드 지우기
-hint사용
-Binding 사용하기
-"cmd + option + L"
-조건문 안에 not 수정

--- a/권지윤/Week 3/hw1/app/src/main/res/layout/activity_main.xml
+++ b/권지윤/Week 3/hw1/app/src/main/res/layout/activity_main.xml
@@ -4,21 +4,21 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_margin="20dp"
-    android:paddingBottom="30dp"
+    android:layout_marginStart="20dp"
+    android:layout_marginEnd="20dp"
+    android:layout_marginBottom="80dp"
     tools:context=".MainActivity">
 
         <TextView
             android:id="@+id/SignUp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="SIGN UP"
             android:padding="50dp"
+            android:text="SIGN UP"
             android:textSize="50sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:ignore="MissingConstraints" />
+            tools:layout_editor_absoluteY="0dp" />
 
         <TextView
             android:id="@+id/id"
@@ -26,8 +26,7 @@
             android:layout_height="wrap_content"
             android:text="ID"
             app:layout_constraintTop_toBottomOf="@id/SignUp"
-            app:layout_constraintStart_toStartOf="parent"
-            tools:ignore="MissingConstraints" />
+            />
 
         <EditText
             android:id="@+id/edit_ID"
@@ -36,12 +35,12 @@
             android:layout_marginBottom="12dp"
             android:ems="10"
             android:inputType="text"
-            android:text="아이디를 입력하세요"
+            android:hint="아이디를 입력하세요"
             app:layout_constraintTop_toBottomOf="@id/id"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            tools:ignore="Autofill,MissingConstraints" />
+             />
 
         <TextView
             android:id="@+id/text_PW"
@@ -49,7 +48,6 @@
             android:layout_height="wrap_content"
             android:text="비밀번호"
             app:layout_constraintTop_toBottomOf="@id/edit_ID"
-            app:layout_constraintStart_toStartOf="parent"
             />
 
         <EditText
@@ -59,12 +57,12 @@
             android:layout_marginBottom="12dp"
             android:ems="10"
             android:inputType="text"
-            android:text="비밀번호를 입력하세요"
+            android:hint="비밀번호를 입력하세요"
             app:layout_constraintTop_toBottomOf="@id/text_PW"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            tools:ignore="MissingConstraints" />
+            />
 
         <TextView
             android:id="@+id/text_name"
@@ -72,7 +70,6 @@
             android:layout_height="wrap_content"
             android:text="닉네임"
             app:layout_constraintTop_toBottomOf="@id/edit_pw"
-            app:layout_constraintStart_toStartOf="parent"
          />
 
         <EditText
@@ -80,7 +77,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:inputType="text"
-            android:text="닉네임을 입력하세요"
+            android:hint="닉네임을 입력하세요"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/text_name"
@@ -91,7 +88,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="MBTI"
-            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/edit_name" />
 
         <EditText
@@ -100,11 +96,11 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="12dp"
             android:inputType="text"
-            android:text="MBTI를 입력하세요"
+            android:hint="MBTI를 입력하세요"
             app:layout_constraintTop_toBottomOf="@id/text_MBTI"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            tools:ignore="MissingConstraints" />
+            />
 
         <TextView
             android:id="@+id/text_ME"
@@ -112,7 +108,7 @@
             android:layout_height="19dp"
             android:text="About Me"
             app:layout_constraintTop_toBottomOf="@id/edit_MBTI"
-            app:layout_constraintStart_toStartOf="parent" />
+            />
 
 
         <EditText
@@ -120,7 +116,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:inputType="text"
-            android:text="한줄 자기소개를 입력해주세요"
+            android:hint="한줄 자기소개를 입력해주세요"
             app:layout_constraintTop_toBottomOf="@id/text_ME"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
