--- a/권지윤/Week 3/hw2/CalHw/app/src/main/res/layout/activity_main.xml
+++ b/권지윤/Week 3/hw2/CalHw/app/src/main/res/layout/activity_main.xml
@@ -18,8 +18,7 @@
         android:text=""
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:ignore="MissingConstraints" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/num2"
@@ -56,7 +55,6 @@
         android:id="@+id/mul"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-
         android:text="*"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -66,7 +64,6 @@
         android:id="@+id/div"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-
         android:text="/"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
