--- a/권지윤/Week 4/HW/app/src/main/res/layout/activity_signup.xml
+++ b/권지윤/Week 4/HW/app/src/main/res/layout/activity_signup.xml
@@ -34,7 +34,7 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="12dp"
             android:ems="10"
-            android:inputType="text"
+            android:inputType="textPassword"
             android:hint="아이디를 입력하세요"
             app:layout_constraintTop_toBottomOf="@id/id"
             app:layout_constraintEnd_toEndOf="parent"
@@ -56,7 +56,7 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="12dp"
             android:ems="10"
-            android:inputType="text"
+            android:inputType="textPassword"
             android:hint="비밀번호를 입력하세요"
             app:layout_constraintTop_toBottomOf="@id/textPW"
             app:layout_constraintEnd_toEndOf="parent"
