--- a/권지윤/Week 5/week5Study/app/src/main/res/layout/activity_home.xml
+++ b/권지윤/Week 5/week5Study/app/src/main/res/layout/activity_home.xml
@@ -4,19 +4,19 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".HomeActivity">
 
     <androidx.fragment.app.FragmentContainerView
-        android:id="@+id/fcv_home"
+        android:id="@+id/activity_home_fcv_home"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:layout_constraintBottom_toTopOf="@id/bnv_home"
+        app:layout_constraintBottom_toTopOf="@id/activity_home_bnv_home"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
-        android:id="@+id/bnv_home"
+        android:id="@+id/activity_home_bnv_home"
         android:layout_width="0dp"
         android:layout_height="80dp"
         app:menu="@menu/menu_home"
