--- a/권지윤/Week 5/week5Study/app/src/main/res/layout/activity_signup.xml
+++ b/권지윤/Week 5/week5Study/app/src/main/res/layout/activity_signup.xml
@@ -7,10 +7,10 @@
     android:layout_marginStart="20dp"
     android:layout_marginEnd="20dp"
     android:layout_marginBottom="80dp"
-    tools:context=".MainActivity">
+    tools:context=".HomeActivity">
 
     <TextView
-        android:id="@+id/SignUp"
+        android:id="@+id/activity_signup_tvSignup"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:padding="50dp"
@@ -21,108 +21,108 @@
         tools:layout_editor_absoluteY="0dp" />
 
     <TextView
-        android:id="@+id/id"
+        android:id="@+id/activity_signup_tvID"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="ID"
-        app:layout_constraintTop_toBottomOf="@id/SignUp"
+        app:layout_constraintTop_toBottomOf="@id/activity_signup_tvSignup"
         />
 
     <EditText
-        android:id="@+id/editID"
+        android:id="@+id/activity_signup_etID"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="12dp"
         android:ems="10"
         android:inputType="textPassword"
         android:hint="아이디를 입력하세요"
-        app:layout_constraintTop_toBottomOf="@id/id"
+        app:layout_constraintTop_toBottomOf="@id/activity_signup_tvID"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         />
 
     <TextView
-        android:id="@+id/textPW"
+        android:id="@+id/activity_signup_tvPW"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="비밀번호"
-        app:layout_constraintTop_toBottomOf="@id/editID"
+        app:layout_constraintTop_toBottomOf="@id/activity_signup_etID"
         />
 
     <EditText
-        android:id="@+id/editPW"
+        android:id="@+id/activity_signup_etPW"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="12dp"
         android:ems="10"
         android:inputType="textPassword"
         android:hint="비밀번호를 입력하세요"
-        app:layout_constraintTop_toBottomOf="@id/textPW"
+        app:layout_constraintTop_toBottomOf="@id/activity_signup_tvPW"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         />
 
     <TextView
-        android:id="@+id/text_name"
+        android:id="@+id/activity_signup_tvName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="닉네임"
-        app:layout_constraintTop_toBottomOf="@id/editPW"
+        app:layout_constraintTop_toBottomOf="@id/activity_signup_etPW"
         />
 
     <EditText
-        android:id="@+id/edit_name"
+        android:id="@+id/activity_signup_etName"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:inputType="text"
         android:hint="닉네임을 입력하세요"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/text_name"
+        app:layout_constraintTop_toBottomOf="@id/activity_signup_tvName"
         />
 
     <TextView
-        android:id="@+id/text_MBTI"
+        android:id="@+id/activity_signup_tvMBTI"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="MBTI"
-        app:layout_constraintTop_toBottomOf="@id/edit_name" />
+        app:layout_constraintTop_toBottomOf="@id/activity_signup_etName" />
 
     <EditText
-        android:id="@+id/edit_MBTI"
+        android:id="@+id/activity_signup_etMBTI"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="12dp"
         android:inputType="text"
         android:hint="MBTI를 입력하세요"
-        app:layout_constraintTop_toBottomOf="@id/text_MBTI"
+        app:layout_constraintTop_toBottomOf="@id/activity_signup_tvMBTI"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         />
 
     <TextView
-        android:id="@+id/text_ME"
+        android:id="@+id/activity_signup_tvME"
         android:layout_width="56dp"
         android:layout_height="19dp"
         android:text="About Me"
-        app:layout_constraintTop_toBottomOf="@id/edit_MBTI"
+        app:layout_constraintTop_toBottomOf="@id/activity_signup_etMBTI"
         />
 
 
     <EditText
-        android:id="@+id/edit_ME"
+        android:id="@+id/activity_signup_etME"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:inputType="text"
         android:hint="한줄 자기소개를 입력해주세요"
-        app:layout_constraintTop_toBottomOf="@id/text_ME"
+        app:layout_constraintTop_toBottomOf="@id/activity_signup_tvME"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
-        android:id="@+id/SignUpBtn"
+        android:id="@+id/activity_signup_btnSignup"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="회원가입하기"
