--- a/권지윤/Week 5/week5Study/app/src/main/res/layout/fragment_home.xml
+++ b/권지윤/Week 5/week5Study/app/src/main/res/layout/fragment_home.xml
@@ -7,7 +7,7 @@
 
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/fragment_home_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="60dp"
