--- a/권지윤/Week 5/week5Study/app/src/main/res/layout/fragment_message.xml
+++ b/권지윤/Week 5/week5Study/app/src/main/res/layout/fragment_message.xml
@@ -6,7 +6,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/frgment_message_tvMessage"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="message"
