Week 6: 권지윤 과제 제출
Refactor: Week5 과제 수정
Feat: MainFragment에 Recycler View를 활용
-내 프로필과 친구 프로필을 구분
-기존 Friend 형식과 다른 내 프로필을 디자인 해서 리스트 상단에 넣음
- 스크롤 시에 내 프로필 영역도 같이 따라 내려감
-Multi-View Type RecyclerView를 활용해볼것
Feat: 생일표시
- 표시 방법, 판정 방법 자유

--- a/권지윤/Week 5/week5Study/app/src/main/res/layout/fragment_home.xml
+++ b/권지윤/Week 5/week5Study/app/src/main/res/layout/fragment_home.xml
@@ -5,15 +5,16 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-
-    <TextView
-        android:id="@+id/fragment_home_tv"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="60dp"
-        android:layout_marginTop="48dp"
-        android:text="home"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_humans"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:orientation="vertical"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:listitem="@layout/item_friend" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
